[ANGOLAR][LOGIN] Created login feature
