# goapi/docs/swagger.yaml
@@ -34,10 +34,12 @@ definitions:
     type: object
   responses.JWTResponse:
     properties:
-      jwt_token:
+      email:
         type: string
       status:
         type: integer
+      token:
+        type: string
     type: object
   responses.OKResponse:
     properties:
@@ -255,7 +257,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
-      summary: Increments number of view for one redirection in fucntion of its ID
+      summary: Increments number of view for one redirection in function of its ID
       tags:
       - redirection
   /user/edit/{id}:
@@ -305,6 +307,32 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Edits user in DB
+      tags:
+      - user
+  /user/info:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.OKResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Returns User information with Auth header
       tags:
       - user
   /user/login:
